--- a/flexbox-business-2/styles.css
+++ b/flexbox-business-2/styles.css
@@ -4,10 +4,18 @@ html {
     margin: auto;
 }
 
+p {
+    font-size: 1.1rem;
+    width: 100%;
+    max-height: 5rem;
+    overflow: auto;
+}
+
 .group {
     display: flex;
    align-content: space-around;
    justify-content: space-around;
+   padding-top: 2rem;
 }
 
 .titleOne {
@@ -18,16 +26,29 @@ html {
 .titleTwo {
     font-size: 2rem;
     font-weight: 800;    
+    padding-top: 2rem;
 }
 
 img {
-    height: 170px;
-    width: auto;;
+    display: block;
+    height: 12.14rem;
+    width: auto;
+    margin: auto;
+    flex-grow: .5;
 }
 
 .blocImg {
-    display: block;
+    display:flexbox
     width: 20%;
+}
+
+.blocImg P {
+    text-align: center;
+}
+
+header .logo {
+    height: 8rem;
+    width: auto;
 }
 
 ul {
@@ -44,10 +65,22 @@ a:hover {
 }
 
 header {
-    display: flex;
-   justify-content: space-around;
+    display: inline-flex;
+  width: 100%;
+   justify-content: space-between;
 }
+
+header .left {
+     width: auto;
+ }
+
+ header .right {
+     width: auto;
+ }
+  
 footer {
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     display: flex;
    justify-content: space-around;
 }
