--- a/responsive-club/styles.css
+++ b/responsive-club/styles.css
@@ -89,10 +89,6 @@ img {
 }
 
 @media only screen and (max-width: 800px) {
-    main {
-        margin: auto;
-    }
-
     header {
         display: flex;
         flex-direction: column;
@@ -100,6 +96,7 @@ img {
 
     div {
         display: block;
+        text-align: center;
     }
 
     h1{
@@ -118,9 +115,13 @@ img {
     /*    width: 400px;*/
         min-width: 40rem;
         height: auto;
+        margin-left: -15px;
+        padding-left: 0;
+        border: 0;
     }
         
     p {
-        max-width: 40rem;       
+        max-width: 40rem;  
+        margin: auto;
     }
 }
